fix modal displaying behind elements

--- a/app/react/sidebar/Footer.module.css
+++ b/app/react/sidebar/Footer.module.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 10000;
 }
 
 .versionInfo {
